<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/enter"
        android:textSize="@dimen/label"
        android:textColor="@color/black"/>

        <TextView
            android:id="@+id/login_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_description"
            android:textSize="@dimen/normal"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/Enter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_login"
            android:layout_width="0dp"
            style="@style/line"
            app:layout_constraintTop_toBottomOf="@id/login_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                style="@style/inputField"
                android:background="@color/white"
                android:hint="@string/login_login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="0dp"
            style="@style/line"
            app:layout_constraintTop_toBottomOf="@id/layout_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/inputField"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="@string/login_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:text="@string/login_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>